syntax = "proto3";

package affiliates;

import "google/protobuf/timestamp.proto";

service AffiliatesService {
  rpc RegisterUser (RegisterUserRequest) returns (UserRegistrationResponse);
  rpc SyncAffiliate (SyncAffiliateRequest) returns (SyncAffiliateResponse);
  rpc SyncTransfers (SyncTransfersRequest) returns (SyncTransfersResponse);
  rpc GetAffiliatedStats (GetAffiliatedStatsRequest) returns (AffiliatedStatsResponse);
  rpc MakeStatsPayment (MakeStatsPaymentRequest) returns (PaymentResponse);
  rpc MakeContract (MakeContractRequest) returns (ContractResponse);
  rpc ConfirmContract (ConfirmContractRequest) returns (ConfirmContractResponse);
}

//
// =====================
// Requests
// =====================
//

message RegisterUserRequest {
  string user_id = 1;
  string country = 2;
}

message SyncAffiliateRequest {
  string user_id = 1;
  string affiliate_code = 2;
}

message SyncTransfersRequest {
  string user_id = 1;
}

message GetAffiliatedStatsRequest {
  string user_id = 1;
}

message MakeStatsPaymentRequest {
  string user_id = 1;
}

message MakeContractRequest {
  string user_id = 1;
}

message ConfirmContractRequest {
  string user_id = 1;
  string contract_id = 2;
  string code = 3;
  string payment_method = 4;
}

//
// =====================
// Shared Models
// =====================
//

message Stats {
  double total_earnings = 1;
  double total_withdrawn = 2;
  double pending_withdrawals = 3;
  int32 number_of_affiliates = 4;
  double total_earnings_last_month = 5;
}

message Transfer {
  double amount = 1;
  TransferStatus status = 2;
  string failure_reason = 3;
  string details = 4;
  google.protobuf.Timestamp completed_date = 5;
}

message Contract {
  string contract_id = 1;
  string status = 2;
  double amount = 3;
  google.protobuf.Timestamp confirmed_at = 4;
  string platform = 5;
  double tax_amount = 6;
}

//
// =====================
// Responses
// =====================
//

message UserRegistrationResponse {
  bool success = 1;
  string message = 2;
  string affiliate_code = 3;
}

message SyncAffiliateResponse {
  bool success = 1;
  string message = 2;
}

message SyncTransfersResponse {
  bool success = 1;
  string message = 2;
}

message AffiliatedStatsResponse {
  bool success = 1;
  string message = 2;
  string affiliate_code = 3;
  string status = 4;
  string stats = 5;
  repeated Transfer transfers = 6;
  google.protobuf.Timestamp next_payment = 7;
  repeated Contract contracts = 8;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}

message ContractResponse {
  string contract_id = 1;
  string message = 2;
  string status = 3;
}

message ConfirmContractResponse {
  bool success = 1;
  string message = 2;
  string contract_id = 3;
}
