// Re-export all proto types
export type {
  RegisterUserRequest,
  RegisterUserRequest__Output,
} from './affiliates/RegisterUserRequest';
export type {
  SyncAffiliateRequest,
  SyncAffiliateRequest__Output,
} from './affiliates/SyncAffiliateRequest';
export type {
  SyncTransfersRequest,
  SyncTransfersRequest__Output,
} from './affiliates/SyncTransfersRequest';
export type {
  GetAffiliatedStatsRequest,
  GetAffiliatedStatsRequest__Output,
} from './affiliates/GetAffiliatedStatsRequest';
export type {
  MakeStatsPaymentRequest,
  MakeStatsPaymentRequest__Output,
} from './affiliates/MakeStatsPaymentRequest';
export type {
  MakeContractRequest,
  MakeContractRequest__Output,
} from './affiliates/MakeContractRequest';
export type {
  ConfirmContractRequest,
  ConfirmContractRequest__Output,
} from './affiliates/ConfirmContractRequest';

export type {
  UserRegistrationResponse,
  UserRegistrationResponse__Output,
} from './affiliates/UserRegistrationResponse';
export type {
  SyncAffiliateResponse,
  SyncAffiliateResponse__Output,
} from './affiliates/SyncAffiliateResponse';
export type {
  SyncTransfersResponse,
  SyncTransfersResponse__Output,
} from './affiliates/SyncTransfersResponse';
export type {
  AffiliatedStatsResponse,
  AffiliatedStatsResponse__Output,
} from './affiliates/AffiliatedStatsResponse';
export type {
  PaymentResponse,
  PaymentResponse__Output,
} from './affiliates/PaymentResponse';
export type {
  ContractResponse,
  ContractResponse__Output,
} from './affiliates/ContractResponse';
export type {
  ConfirmContractResponse,
  ConfirmContractResponse__Output,
} from './affiliates/ConfirmContractResponse';

export type { Stats, Stats__Output } from './affiliates/Stats';
export type { Transfer, Transfer__Output } from './affiliates/Transfer';
export type { Contract, Contract__Output } from './affiliates/Contract';
