// Original file: /workspaces/D-Affiliates/proto/affiliates.proto


export interface ConfirmContractRequest {
  'user_id'?: (string);
  'contract_id'?: (string);
  'code'?: (string);
  'payment_method'?: (string);
}

export interface ConfirmContractRequest__Output {
  'user_id': (string);
  'contract_id': (string);
  'code': (string);
  'payment_method': (string);
}
